# merpati

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  x.nu
.github/workflows/: release.yml
crates/merpati-http/: Cargo.toml
crates/merpati-http/src/: client.rs  lib.rs
crates/merpati-http/src/tabs/: body.rs  headers.rs  mod.rs  response.rs  script.rs
crates/merpati-script/: Cargo.toml
crates/merpati-script/src/: lib.rs
crates/merpati-stage/: Cargo.toml
crates/merpati-stage/src/: lib.rs
src/: main.rs
x/release/: build.nu  changelog.nu  extract-changelog.nu  new-changelog.nu
