[package]
name = "merpati"
description = "Merpati API Client"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
iced.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
resolver = "3"

[workspace.package]
repository = "https://github.com/secona/merpati"
authors = ["Vito Secona <secona00@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.14", features = ["http1", "client", "tokio"] }
iced = { version = "0.13.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
