[package]
name = "merpati"
description = "Merpati API Client"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

merpati-http.workspace = true
merpati-stage.workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/secona/merpati"
authors = ["Vito Secona <secona00@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Core
iced = { version = "0.13.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# HTTP
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.14", features = ["http1", "client", "tokio"] }

# Workspace
merpati-http = { path = "crates/merpati-http" }
merpati-stage = { path = "crates/merpati-stage" }
