[package]
name = "merpati"
description = "Merpati API Client"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

merpati-http.workspace = true
merpati-stage.workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/secona/merpati"
authors = ["Vito Secona <secona00@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Core
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = { version = "0.12.2", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# HTTP
reqwest = "0.12.20"

# Scripting
allocative = "0.3.4"
starlark = "0.13.0"

# Workspace
merpati-http = { path = "crates/merpati-http" }
merpati-script = { path = "crates/merpati-script" }
merpati-stage = { path = "crates/merpati-stage" }
