[package]
name = "merpati-http"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
