[package]
name = "merpati-http"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
iced_aw = { workspace = true, features = ["tabs"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

reqwest.workspace = true

merpati-script.workspace = true
