[package]
name = "merpati-stage"
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

merpati-http.workspace = true
